--- a/app/src/main/res/layout/drawer_items_layout.xml
+++ b/app/src/main/res/layout/drawer_items_layout.xml
@@ -27,7 +27,7 @@
                     android:layout_height="1dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="4dp"
-                    android:background="#5d6066"/>
+                    android:background="#a4a4a6"/>
         </LinearLayout>
 
 
