--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,7 @@
     <color name="colorDrawerBlue">#00b9f5</color>
     <color name="colorDrawerDark">#5d6066</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorLightGray">#c7c5c5</color>
 
 </resources>
