--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -7,8 +7,11 @@
 
     <ImageView
         android:id="@+id/splash"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:tint="@color/colorPrimaryDark"
+        android:layout_centerInParent="true"
+        android:src="@drawable/com_facebook_button_icon"/>
 
 
 </RelativeLayout>
