--- a/app/src/main/res/layout/activity_main_social.xml
+++ b/app/src/main/res/layout/activity_main_social.xml
@@ -14,23 +14,18 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:gravity="center"
-            android:padding="32dp"
             android:text="@string/app_name"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textSize="42sp" />
     </LinearLayout>
 
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:background="@color/white"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="8dp">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
 
 
         <LinearLayout
@@ -92,13 +87,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <Button
                     android:id="@+id/facebook_login_button"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginBottom="4dp"
-                    android:layout_weight="1"
+                    android:background="@color/com_facebook_button_login_background_color"
                     android:drawableLeft="@drawable/ic_facebook_white_36dp"
                     android:drawableStart="@drawable/ic_facebook_white_36dp"
                     android:tag="facebook_login_button"
@@ -109,8 +103,8 @@
                 <Button
                     android:id="@+id/google_login_button"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@color/google_plus_brand_color"
                     android:drawableLeft="@drawable/ic_google_plus_white_36dp"
                     android:drawableStart="@drawable/ic_google_plus_white_36dp"
                     android:tag="google_login_button"
@@ -121,11 +115,12 @@
                 <Button
                     android:id="@+id/logout_button"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:background="@color/cast_intro_overlay_background_color"
                     android:text="@string/logout_text"
                     android:textColor="@color/white" />
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 </LinearLayout>
