--- a/app/src/main/res/layout/drawer_items_layout.xml
+++ b/app/src/main/res/layout/drawer_items_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="50dp"
+    android:layout_centerVertical="true"
     android:orientation="vertical">
 
         <LinearLayout
@@ -24,7 +25,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="8dp"
-                    android:background="#a4a4a6"/>
+                    android:background="@color/colorLightGray"/>
         </LinearLayout>
 
 
